@@ -12,6 +12,7 @@ v9.2.0
 ======
 
 - WL16285: Remake Multi Statement Execution
+- BUG#37145655: MySQL Connector/Python Configuration Files RCE
 - BUG#36126909: "Unread result found" exception/bad MySQLCursor.statement when query text contains code comments
 - BUG#35810050: Executing multiple statements fails when importing Sakila
 
